--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,27 +1,28 @@
 <footer id="footer">
-
-    
-  
-    <div class="container d-md-flex py-4">
-  
-      <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Company</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-         
-        </div>
-      </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+  <div class="container d-md-flex justify-content-between align-items-center py-4">
+    <div class="text-center text-md-start mb-3 mb-md-0">
+      <div class="copyright">
+        &copy; Copyright <strong><span>ByteBazaar</span></strong>. All Rights Reserved
       </div>
     </div>
-  </footer><!-- End Footer -->
+    <div class="footer-links text-center text-md-start">
+      
+      <ul class="list-unstyled">
+        <li><a href="/home">Home</a></li>
+        <li><a href="/catalogo">Catálogo</a></li>
+        <li><a href="/contacto">Contacto</a></li>
+      </ul>
+      <ul class="list-unstyled">
+        <li><a href="/moviles">Móviles</a></li>
+        <li><a href="/relojes">Relojes</a></li>
+        <li><a href="/gafas">Gafas VR</a></li>
+        <li><a href="/impresora">Impresoras 3D</a></li>
+      </ul>
+    </div>
+    <div class="social-links text-center text-md-end">
+      <a href="https://twitter.com/home" class="twitter"><i class="bi bi-twitter"></i></a>
+      <a href="https://www.facebook.com/privacy/consent/?flow=ad_free_subscription&params%5Bafs_variant%5D=first_time&source=ad_free_subscription_blocking_flow" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.instagram.com/" class="instagram"><i class="bi bi-instagram"></i></a>
+    </div>
+  </div>
+</footer>
