le he añadido los menus a todaas las paginas y he actualizado algunos secciones con información

--- a/src/app/componentes/catalogo/moviles/moviles.component.html
+++ b/src/app/componentes/catalogo/moviles/moviles.component.html
@@ -1,5 +1,6 @@
+<app-nabvar></app-nabvar>
 
-<!-- ======= Breadcrumbs ======= -->
+
 <section id="breadcrumbs" class="breadcrumbs">
     <div class="container">
 
