he añadido un nuevo componente registro  y login y los estoy enlazando

--- a/src/app/componentes/carrito/carrito.component.html
+++ b/src/app/componentes/carrito/carrito.component.html
@@ -1,1 +1,24 @@
-<p>carrito works!</p>
+<app-nabvar></app-nabvar>
+
+<form class="formulario">
+    <h1>INICIAR SESIÓN</h1>
+    <div class="contenedor">
+
+
+
+        <div class="input-contenedor">
+            <i class="fas fa-envelope icon"></i>
+            <input type="text" placeholder="Correo Electronico o Nombre de Usuario">
+
+        </div>
+
+        <div class="input-contenedor">
+            <i class="fas fa-key icon"></i>
+            <input type="password" placeholder="Contraseña">
+
+        </div>
+        <input type="submit" value="INICIAR SESIÓN" class="button">
+
+        <p>¿No tienes una cuenta? <a class="link" href="registro.html">Registrate </a></p>
+    </div>
+</form>
