--- a/src/app/componentes/nabvar/nabvar.component.html
+++ b/src/app/componentes/nabvar/nabvar.component.html
@@ -1,3 +1,5 @@
+
+ 
  <header id="header" class="fixed-top">
   <div class="container d-flex align-items-center">
 
@@ -16,10 +18,10 @@
         </li>
         <li><a routerLink="/contacto" >Contacto</a></li>
         <li class="nav-item">
-          <a class="nav-link" ><i class="bi bi-person fs-4"></i></a>
+          <a class="nav-link"  class="bi bi-person fs-4" routerLink="/login"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="cart.html"><i class="bi bi-cart fs-4"></i></a>
+          <a class="nav-link" routerLink="/carrito"><i class="bi bi-cart fs-4"></i></a>
         </li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
@@ -42,12 +44,11 @@
     </li>
     <li><a routerLink="/contacto" >Contacto</a></li>
     <li class="nav-item">
-      <a class="nav-link" ><i class="bi bi-person fs-4"></i></a>
+      <a class="nav-link"  class="bi bi-person fs-4" routerLink="/login"></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="cart.html"><i class="bi bi-cart fs-4"></i></a>
+      <a class="nav-link" routerLink="/carrito"><i class="bi bi-cart fs-4"></i></a>
     </li>
   </ul>
   <i class="bi bi-list mobile-nav-toggle"></i>
 </nav><!-- .navbar -->
-
