Actualicé la página de inicio y registro.

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -41,23 +41,25 @@
   </section><!-- End Hero -->
 
 
-<form class="formulario">
-    <h1 class="titulo">INICIAR SESIÓN</h1>
+  <form class="formulario">
+    <h1>INICIAR SESIÓN</h1>
     <div class="contenedor">
+
+
 
         <div class="input-contenedor">
             <i class="fas fa-envelope icon"></i>
-            <input type="text" placeholder="Correo Electronico o Nombre de Usuario" class="input-text">
+            <input type="text" placeholder="Correo Electronico o Nombre de Usuario">
 
         </div>
 
         <div class="input-contenedor">
             <i class="fas fa-key icon"></i>
-            <input type="password" placeholder="Contraseña" class="input-password">
+            <input type="password" placeholder="Contraseña">
 
         </div>
-        <input type="submit" value="INICIAR SESIÓN" class="button iniciar-sesion">
+        <input type="submit" value="INICIAR SESIÓN" class="button">
 
-        <p class="mensaje">¿No tienes una cuenta? <a class="link" routerLink="/registro">Registrate </a></p>
+        <p>¿No tienes una cuenta? <a class="nav-link" routerLink="/registro">Registrar</a></p>
     </div>
 </form>
