--- a/src/app/componentes/nabvar/nabvar.component.html
+++ b/src/app/componentes/nabvar/nabvar.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link"  class="bi bi-person fs-4" routerLink="/login"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/carrito"><i class="bi bi-cart fs-4"></i></a>
+          <a class="nav-link" class="bi bi-cart fs-4" routerLink="/carrito"></a>
         </li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
@@ -47,7 +47,7 @@
       <a class="nav-link"  class="bi bi-person fs-4" routerLink="/login"></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/carrito"><i class="bi bi-cart fs-4"></i></a>
+      <a class="nav-link" class="bi bi-cart fs-4" routerLink="/carrito"></a>
     </li>
   </ul>
   <i class="bi bi-list mobile-nav-toggle"></i>
