he hecho 4las paginas de catalogo

--- a/src/app/componentes/catalogo/gafas/gafas.component.html
+++ b/src/app/componentes/catalogo/gafas/gafas.component.html
@@ -1,2 +1,60 @@
 <app-nabvar></app-nabvar>
-<p>gafas works!</p>
+<br><br><br><br><br>
+<div class="pagina-producto-container">
+    <div class="columna-izquierda">
+      <img src="../Media/producto3.jpg" alt="Gafas VR UltraVision">
+  
+      <!-- Selectores para alternativas -->
+      <label>Color:</label>
+      <select id="color" name="color">
+        <option>Negro</option>
+        <option>Plateado</option>
+        <option>Amarillo</option>
+        <option>Blanco</option>
+      </select>
+  
+      <!-- Sección de Especificaciones Técnicas -->
+      <section class="especificaciones">
+        <h2>Especificaciones Técnicas</h2>
+        <ul>
+          <li>Tecnología de Realidad Virtual</li>
+          <li>Resolución de Pantalla: Ultra HD</li>
+          <li>Seguimiento Ocular y Gestual</li>
+          <li>Batería de larga duración para sesiones extensas</li>
+          <li>Diseño Ergonómico y Elegante</li>
+          <li>Conectividad Avanzada para una experiencia sin interrupciones</li>
+          <li>Almacenamiento expandible para tu biblioteca virtual</li>
+          <li>Sistema operativo rápido y eficiente</li>
+        </ul>
+      </section>
+  
+      <label for="talla">Capacidad:</label>
+      <select id="capacidad" name="capacidad">
+        <option>64 GB</option>
+        <option>128 GB</option>
+        <option>256 GB</option>
+        <option>512 GB</option>
+      </select>
+    </div>
+  
+    <div class="columna-derecha">
+      <h2>Gafas VR UltraVision - Tecnología Avanzada</h2>
+      <p>Explora la última revolución en experiencias virtuales con nuestras Gafas VR UltraVision, un hito en la tecnología de realidad virtual. Con características vanguardistas y un diseño futurista, este dispositivo transformará por completo tu manera de sumergirte en mundos virtuales.</p>
+      <p class="precio">Precio: $499.99</p>
+      <a href="../Pagos/Pagos.html" class="add-to-cart">Agregar al Carrito</a>
+      <a href="../Pagos/Pagos.html" class="buy-now-button">Comprar Ahora</a>
+  
+      <!-- Sección de Características Destacadas -->
+      <section>
+        <h2>Características Destacadas</h2>
+        <ul>
+          <li>Experiencia de realidad virtual de última generación</li>
+          <li>Pantallas de alta resolución para una inmersión total</li>
+          <li>Cámara integrada con seguimiento ocular y gestual</li>
+          <li>Batería de larga duración para sesiones extensas</li>
+          <li>Diseño ergonómico y elegante</li>
+          <li>Conectividad avanzada para una experiencia sin interrupciones</li>
+          <li>Almacenamiento expandible para tu biblioteca virtual</li>
+          <li>Sistema operativo rápido y eficiente para una navegación fluida</li>
+        </ul>
+      </section>
