--- a/src/app/componentes/catalogo/moviles/moviles.component.html
+++ b/src/app/componentes/catalogo/moviles/moviles.component.html
@@ -1,19 +1,91 @@
 <app-nabvar></app-nabvar>
+<br><br><br><br><br><br>
 
 
-<section id="breadcrumbs" class="breadcrumbs">
-    <div class="container">
 
-      <div class="d-flex justify-content-between align-items-center">
-        <h2>Testimonials</h2>
-        <ol>
-          <li><a href="index.html">Home</a></li>
-          <li>Testimonials</li>
-        </ol>
-      </div>
 
-    </div>
-  </section><!-- End Breadcrumbs -->
+
+<div class="pagina-producto-container">
+<div class="columna-izquierda">
+  <img src="../Media/producto2.jpg" alt="Móvil UltraTech">
+
+  <!-- Selectores para alternativas -->
+  <label>Color:</label>
+  <select id="color" name="color">
+    <option>Negro</option>
+    <option>Plateado</option>
+    <option>Amarillo</option>
+    <option>Blanco</option>
+  </select>
+
+  <!-- Sección de Especificaciones Técnicas -->
+  <section class="especificaciones">
+    <h2>Especificaciones Técnicas</h2>
+    <ul>
+      <li>Procesador: Octa-Core a 3.0GHz</li>
+      <li>RAM: 12GB DDR5</li>
+      <li>Almacenamiento interno: 512GB SSD</li>
+      <li>Pantalla: 6.7 pulgadas 4K Super AMOLED</li>
+      <li>Tarjeta Gráfica: Adreno 680</li>
+      <li>Batería: 5000 mAh con carga rápida</li>
+    </ul>
+  </section>
+
+  <label for="capacidad">Capacidad:</label>
+  <select id="capacidad" name="capacidad">
+    <option>128 GB</option>
+    <option>256 GB</option>
+    <option>512 GB</option>
+    <option>1 TB</option>
+  </select>
+</div>
+
+<div class="columna-derecha">
+  <h2>Móvil UltraTech - Tecnología Avanzada</h2>
+  <p>Explora la culminación de la ingeniería moderna con el Móvil UltraTech, la epítome de la innovación en tecnología móvil. Diseñado con características de vanguardia y un estilo elegante, este dispositivo está destinado a redefinir tu experiencia tecnológica, llevándola a nuevas alturas de sofisticación y rendimiento.</p>
+  <p>Sumérgete en un mundo donde la tecnología y el diseño convergen para ofrecerte un dispositivo excepcionalmente avanzado. El Móvil UltraTech es mucho más que un simple teléfono; es una obra maestra de la ingeniería que te cautivará desde el primer momento.</p>
+  <p>Con su potente procesador Octa-Core de última generación, el Móvil UltraTech impulsa el rendimiento a niveles sin precedentes. Experimenta la fluidez y la velocidad en cada tarea, desde multitareas intensivas hasta ejecutar las aplicaciones más exigentes.</p>
+
+
+  <p class="precio">Precio: $999.99</p>
+  <a href="../Pagos/Pagos.html" class="add-to-cart">Agregar al Carrito</a>
+  <a href="../Pagos/Pagos.html" class="buy-now-button">Comprar Ahora</a>
+
+  <!-- Sección de Características Destacadas -->
+  <section>
+    <h2>Características Destacadas</h2>
+    <ul>
+      <li>Procesador Octa-Core de última generación</li>
+      <li>Pantalla Super AMOLED 4K de alta resolución</li>
+      <li>Cámara avanzada con funciones innovadoras</li>
+      <li>Batería de larga duración con carga rápida</li>
+      <li>Diseño ligero y elegante</li>
+      <li>Conectividad 5G de última tecnología</li>
+      <li>Almacenamiento masivo y expandible</li>
+      <li>Sistema operativo rápido y eficiente</li>
+    </ul>
+  </section>
+</div>
+</div>
+
+<!-- Sección de Opiniones de Usuarios -->
+<section>
+<h2>Opiniones de Usuarios</h2>
+<blockquote>
+  "Estoy asombrado con el Móvil UltraTech. Desde la calidad excepcional de la pantalla hasta la velocidad asombrosa del procesador, cada aspecto supera mis expectativas. Este dispositivo ha transformado por completo mi experiencia móvil, proporcionando un rendimiento inigualable en mi trabajo y momentos de entretenimiento."
+</blockquote>
+<blockquote>
+  "Mi Móvil UltraTech se ha vuelto indispensable en mi vida diaria. Desde el trabajo hasta el entretenimiento, este dispositivo ha demostrado ser la elección perfecta. Su diseño elegante y la eficiencia de la batería son solo algunos de los aspectos que hacen que este móvil se destaque."
+</blockquote>
+<blockquote>
+  "La duración de la batería de mi Móvil UltraTech es una verdadera maravilla. Puedo utilizarlo durante todo el día sin preocuparme por quedarme sin energía. Esto ha mejorado significativamente mi productividad y ha eliminado la necesidad constante de cargar el dispositivo. Una de las mejores inversiones que he realizado."
+</blockquote>
+<blockquote>
+  "La combinación de un diseño elegante y una conectividad rápida hacen que mi Móvil UltraTech sea excepcional. Me sorprendió gratamente la velocidad con la que puedo acceder y compartir información. La experiencia de usuario se ve realzada por estos detalles, convirtiendo cada interacción en una experiencia eficiente y placentera."
+</blockquote>
+
+</section>
+
 
   <!-- ======= Testimonials Section ======= -->
   <section id="testimonials" class="testimonials section-bg">
