he actualizado los css de los productos

--- a/src/app/componentes/catalogo/moviles/moviles.component.html
+++ b/src/app/componentes/catalogo/moviles/moviles.component.html
@@ -7,7 +7,7 @@
 
 <div class="pagina-producto-container">
 <div class="columna-izquierda">
-  <img src="../Media/producto2.jpg" alt="Móvil UltraTech">
+  <img src="assets/img/producto2.jpg" alt="Móvil UltraTech">
 
   <!-- Selectores para alternativas -->
   <label>Color:</label>
@@ -48,8 +48,8 @@
 
 
   <p class="precio">Precio: $999.99</p>
-  <a href="../Pagos/Pagos.html" class="add-to-cart">Agregar al Carrito</a>
-  <a href="../Pagos/Pagos.html" class="buy-now-button">Comprar Ahora</a>
+  <a href="/carrito" class="add-to-cart">Agregar al Carrito</a>
+  <a href="/carrito" class="buy-now-button">Comprar Ahora</a>
 
   <!-- Sección de Características Destacadas -->
   <section>
@@ -68,110 +68,113 @@
 </div>
 </div>
 
-<!-- Sección de Opiniones de Usuarios -->
-<section>
-<h2>Opiniones de Usuarios</h2>
-<blockquote>
-  "Estoy asombrado con el Móvil UltraTech. Desde la calidad excepcional de la pantalla hasta la velocidad asombrosa del procesador, cada aspecto supera mis expectativas. Este dispositivo ha transformado por completo mi experiencia móvil, proporcionando un rendimiento inigualable en mi trabajo y momentos de entretenimiento."
-</blockquote>
-<blockquote>
-  "Mi Móvil UltraTech se ha vuelto indispensable en mi vida diaria. Desde el trabajo hasta el entretenimiento, este dispositivo ha demostrado ser la elección perfecta. Su diseño elegante y la eficiencia de la batería son solo algunos de los aspectos que hacen que este móvil se destaque."
-</blockquote>
-<blockquote>
-  "La duración de la batería de mi Móvil UltraTech es una verdadera maravilla. Puedo utilizarlo durante todo el día sin preocuparme por quedarme sin energía. Esto ha mejorado significativamente mi productividad y ha eliminado la necesidad constante de cargar el dispositivo. Una de las mejores inversiones que he realizado."
-</blockquote>
-<blockquote>
-  "La combinación de un diseño elegante y una conectividad rápida hacen que mi Móvil UltraTech sea excepcional. Me sorprendió gratamente la velocidad con la que puedo acceder y compartir información. La experiencia de usuario se ve realzada por estos detalles, convirtiendo cada interacción en una experiencia eficiente y placentera."
-</blockquote>
-
-</section>
 
 
-  <!-- ======= Testimonials Section ======= -->
-  <section id="testimonials" class="testimonials section-bg">
-    <div class="container">
+ <!-- ======= Testimonials Section ======= -->
+ <section id="testimonials" class="testimonials section-bg">
+  <div class="container">
 
-      <div class="row">
+    <div class="row">
 
-        <div class="col-lg-6" data-aos="fade-up">
-          <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
+      <div class="col-lg-6" data-aos="fade-up">
+        <div class="testimonial-item">
+          <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+          <h3>Saul Goodman</h3>
+          <h4>Ceo &amp; Founder</h4>
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            "Estoy asombrado con el Móvil UltraTech. Desde la calidad excepcional de la pantalla hasta la velocidad asombrosa del procesador, cada aspecto supera mis expectativas. Este dispositivo ha transformado por completo mi experiencia móvil, proporcionando un rendimiento inigualable en mi trabajo y momentos de entretenimiento."
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
         </div>
+      </div>
 
-        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-          <div class="testimonial-item mt-4 mt-lg-0">
-            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-            <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="testimonial-item mt-4 mt-lg-0">
+          <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+          <h3>Sara Wilsson</h3>
+          <h4>Designer</h4>
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            "La duración de la batería de mi Móvil UltraTech es una verdadera maravilla. Puedo utilizarlo durante todo el día sin preocuparme por quedarme sin energía. Esto ha mejorado significativamente mi productividad y ha eliminado la necesidad constante de cargar el dispositivo. Una de las mejores inversiones que he realizado."
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
         </div>
+      </div>
 
-        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-          <div class="testimonial-item mt-4">
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="testimonial-item mt-4">
+          <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+          <h3>Jena Karlis</h3>
+          <h4>Store Owner</h4>
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            "Mi Móvil UltraTech se ha vuelto indispensable en mi vida diaria. Desde el trabajo hasta el entretenimiento, este dispositivo ha demostrado ser la elección perfecta. Su diseño elegante y la eficiencia de la batería son solo algunos de los aspectos que hacen que este móvil se destaque."
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
         </div>
+      </div>
 
-        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-          <div class="testimonial-item mt-4">
-            <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-            <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="testimonial-item mt-4">
+          <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+          <h3>Matt Brandon</h3>
+          <h4>Freelancer</h4>
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            "La combinación de un diseño elegante y una conectividad rápida hacen que mi Móvil UltraTech sea excepcional. Me sorprendió gratamente la velocidad con la que puedo acceder y compartir información. La experiencia de usuario se ve realzada por estos detalles, convirtiendo cada interacción en una experiencia eficiente y placentera."
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
         </div>
+      </div>
 
-        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-          <div class="testimonial-item mt-4">
-            <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-            <h3>John Larson</h3>
-            <h4>Entrepreneur</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
+    
+
+     
+
+    </div>
+
+  </div>
+</section><!-- End Testimonials Section -->
+<!-- Sección de Productos Relacionados Destacados -->
+<section id="productos-relacionados" class="productos-relacionados">
+  <div class="container">
+    <div class="section-title" data-aos="fade-up">
+      <h2>Productos Relacionados Destacados</h2>
+      <p>Explora otros productos que podrían interesarte</p>
+    </div>
+
+    <div class="row" data-aos="fade-up" data-aos-delay="100">
+
+      <!-- Producto 1 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="producto">
+            <img src="assets/img/producto4.jpg" class="img-fluid" alt="Producto 2">
+            <h3>Impresora 3D</h3>
+            <p class="precio">$399.99</p>
+            <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
-
-        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
-          <div class="testimonial-item mt-4">
-            <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
-            <h3>Emily Harison</h3>
-            <h4>Store Owner</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Eius ipsam praesentium dolor quaerat inventore rerum odio. Quos laudantium adipisci eius. Accusamus qui iste cupiditate sed temporibus est aspernatur. Sequi officiis ea et quia quidem.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
+    </div>
+      <!-- Producto 2 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="producto">
+          <img src="assets/img/producto3.jpg" class="img-fluid" alt="Producto 3">
+          <h3>Gafas VR</h3>
+          <p class="precio">$299.99</p>
+          <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
+      </div>
 
+      <!-- Producto 3 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="producto">
+          <img src="assets/img/producto1.jpg" class="img-fluid" alt="Producto 4">
+          <h3>Relojes</h3>
+          <p class="precio">$199.99</p>
+          <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
+        </div>
       </div>
 
     </div>
-  </section><!-- End Testimonials Section -->
+  </div>
+</section>
