--- a/src/app/componentes/catalogo/impresora/impresora.component.css
+++ b/src/app/componentes/catalogo/impresora/impresora.component.css
@@ -47,22 +47,21 @@
     color: rgb(0, 0, 0);
 }
 
-/* Estilo para los botones "Agregar al Carrito" y "Comprar Ahora" */
 .add-to-cart,
 .buy-now-button {
     display: inline-block;
     padding: 10px 20px;
     margin-top: 20px;
     text-decoration: none;
-    color: #000000;
-    background-color: rgba(234, 181, 27, 0.87);
+    color: #ffffff;
+    background-color: #333333;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
 
 .add-to-cart:hover,
 .buy-now-button:hover {
-    background-color: #333; /* Cambia el color al pasar el mouse */
+    background-color: #1bbd36;
 }
 
 /* Estilo para el contenido adicional sobre el producto */
