--- a/src/app/componentes/catalogo/relojes/relojes.component.html
+++ b/src/app/componentes/catalogo/relojes/relojes.component.html
@@ -1,80 +1,195 @@
 <app-nabvar></app-nabvar>
 
-<br><br><br><br>
+<br><br><br><br><br><br><br>
+
+
 
 <div class="pagina-producto-container">
-    <div class="columna-izquierda">
-      <img src="../Media/producto1.jpg" alt="Producto Tecnológico">
-  
-      <!-- Selectores para alternativas -->
-      <label>Color:</label>
-      <select id="color" name="color">
-        <option>Negro</option>
-        <option>Plateado</option>
-        <option>Amarillo</option>
-        <option>Blanco</option>
-      </select>
-  
-      <!-- Sección de Especificaciones Técnicas -->
-      <section class="especificaciones">
-        <h2>Especificaciones Técnicas</h2>
-        <ul>
-          <li>Procesador: Quad-Core a 2.5GHz</li>
-          <li>RAM: 8GB DDR4</li>
-          <li>Almacenamiento interno: 256GB SSD</li>
-          <li>Pantalla: 15.6 pulgadas Full HD</li>
-          <li>Tarjeta Gráfica: NVIDIA GeForce GTX 1650</li>
-          <li>Batería: 6 celdas, 72 Wh</li>
-        </ul>
-      </section>
-  
-      <label for="capacidad">Capacidad:</label>
-      <select id="capacidad" name="capacidad">
-        <option>64 GB</option>
-        <option>128 GB</option>
-        <option>256 GB</option>
-        <option>512 GB</option>
-      </select>
+  <div class="columna-izquierda">
+    <img src="assets/img/producto1.jpg" class="producto1" alt="">
+    <br>
+
+    <label>Color:</label>
+    <select id="color" name="color">
+      <option>Negro</option>
+      <option>Plateado</option>
+      <option>Amarillo</option>
+      <option>Blanco</option>
+    </select>
+
+    <section class="especificaciones">
+      <h2>Especificaciones Técnicas</h2>
+      <ul>
+        <li>Procesador: Quad-Core a 2.5GHz</li>
+        <li>RAM: 8GB DDR4</li>
+        <li>Almacenamiento interno: 256GB SSD</li>
+        <li>Pantalla: 15.6 pulgadas Full HD</li>
+        <li>Tarjeta Gráfica: NVIDIA GeForce GTX 1650</li>
+        <li>Batería: 6 celdas, 72 Wh</li>
+      </ul>
+    </section>
+
+    <label for="capacidad">Capacidad:</label>
+    <select id="capacidad" name="capacidad">
+      <option>64 GB</option>
+      <option>128 GB</option>
+      <option>256 GB</option>
+      <option>512 GB</option>
+    </select>
+  </div>
+
+  <div class="columna-derecha">
+    <h2>Producto Tecnológico Avanzado</h2>
+    <p>Descubre la última innovación en tecnología con nuestro producto de última generación. Con características de vanguardia y un diseño elegante, este dispositivo revolucionará tu experiencia tecnológica.</p>
+    <p class="precio">Precio: $499.99</p>
+    <a href="/carrito" class="add-to-cart">Agregar al Carrito</a>
+    <a href="/carrito" class="buy-now-button">Comprar Ahora</a>
+
+    <section>
+      <h2>Características Destacadas</h2>
+      <ul>
+        <li>Procesador de última generación</li>
+        <li>Pantalla de alta resolución</li>
+        <li>Cámara avanzada con funciones innovadoras</li>
+        <li>Batería de larga duración</li>
+        <li>Diseño ligero y elegante</li>
+        <li>Conectividad de última tecnología</li>
+        <li>Almacenamiento expandible</li>
+        <li>Sistema operativo rápido y eficiente</li>
+      </ul>
+    </section>
+  </div>
+</div>
+
+<!-- Sección de Productos Relacionados Destacados -->
+<section id="productos-relacionados" class="productos-relacionados">
+  <div class="container">
+    <div class="section-title" data-aos="fade-up">
+      <h2>Productos Relacionados Destacados</h2>
+      <p>Explora otros productos que podrían interesarte</p>
     </div>
-  
-    <div class="columna-derecha">
-      <h2>Producto Tecnológico Avanzado</h2>
-      <p>Descubre la última innovación en tecnología con nuestro producto de última generación. Con características de vanguardia y un diseño elegante, este dispositivo revolucionará tu experiencia tecnológica.</p>
-      <p class="precio">Precio: $499.99</p>
-      <a href="../Pagos/Pagos.html" class="add-to-cart">Agregar al Carrito</a>
-      <a href="../Pagos/Pagos.html" class="buy-now-button">Comprar Ahora</a>
-  
-      <!-- Sección de Características Destacadas -->
-      <section>
-        <h2>Características Destacadas</h2>
-        <ul>
-          <li>Procesador de última generación</li>
-          <li>Pantalla de alta resolución</li>
-          <li>Cámara avanzada con funciones innovadoras</li>
-          <li>Batería de larga duración</li>
-          <li>Diseño ligero y elegante</li>
-          <li>Conectividad de última tecnología</li>
-          <li>Almacenamiento expandible</li>
-          <li>Sistema operativo rápido y eficiente</li>
-        </ul>
-      </section>
+
+    <div class="row" data-aos="fade-up" data-aos-delay="100">
+
+      <!-- Producto 1 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="producto">
+            <img src="assets/img/producto2.jpg" class="img-fluid" alt="Producto 2">
+            <h3>Móviles</h3>
+            <p class="precio">$399.99</p>
+            <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
+        </div>
+    </div>
+      <!-- Producto 2 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="producto">
+          <img src="assets/img/producto3.jpg" class="img-fluid" alt="Producto 3">
+          <h3>Gafas VR</h3>
+          <p class="precio">$299.99</p>
+          <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
+        </div>
+      </div>
+
+      <!-- Producto 3 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="producto">
+          <img src="assets/img/producto4.jpg" class="img-fluid" alt="Producto 4">
+          <h3>Impresora 3D</h3>
+          <p class="precio">$199.99</p>
+          <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
+        </div>
+      </div>
+
     </div>
   </div>
-  
-  <!-- Sección de Opiniones de Usuarios -->
-  <section>
-    <h2>Opiniones de Usuarios</h2>
-    <blockquote>
-      "He quedado verdaderamente impresionado con este producto. Desde la calidad excepcional de la pantalla hasta la velocidad asombrosa del procesador, cada aspecto supera mis expectativas. Este dispositivo ha transformado por completo mi experiencia tecnológica, proporcionando un rendimiento inigualable en mi trabajo y momentos de entretenimiento."
-    </blockquote>
-    <blockquote>
-      "Este dispositivo se ha vuelto indispensable en mi vida diaria. No puedo concebir cómo sería mi día sin esta herramienta versátil. Desde el trabajo hasta el entretenimiento, este producto ha demostrado ser la elección perfecta. Su diseño elegante y la eficiencia de la batería son solo algunos de los aspectos que hacen que este dispositivo se destaque."
-    </blockquote>
-    <blockquote>
-      "La duración de la batería de este producto es una verdadera maravilla. Puedo utilizarlo durante todo el día sin preocuparme por quedarme sin energía. Esto ha mejorado significativamente mi productividad y ha eliminado la necesidad constante de cargar el dispositivo. Una de las mejores inversiones que he realizado."
-    </blockquote>
-    <blockquote>
-      "La combinación de un diseño elegante y una conectividad rápida hacen que este producto sea excepcional. Me sorprendió gratamente la velocidad con la que puedo acceder y compartir información. La experiencia de usuario se ve realzada por estos detalles, convirtiendo cada interacción en una experiencia eficiente y placentera."
-    </blockquote>
-  
-  </section>
+</section>
+
+
+  <!-- ======= Testimonials Section ======= -->
+  <section id="testimonials" class="testimonials section-bg">
+    <div class="container">
+
+      <div class="row">
+
+        <div class="col-lg-6" data-aos="fade-up">
+          <div class="testimonial-item">
+            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+            <h3>Saul Goodman</h3>
+            <h4>Ceo &amp; Founder</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              "He quedado verdaderamente impresionado con este producto. Desde la calidad excepcional de la pantalla hasta la velocidad asombrosa del procesador, cada aspecto supera mis expectativas. Este dispositivo ha transformado por completo mi experiencia tecnológica, proporcionando un rendimiento inigualable en mi trabajo y momentos de entretenimiento."
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="testimonial-item mt-4 mt-lg-0">
+            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+            <h3>Sara Wilsson</h3>
+            <h4>Designer</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              "Este dispositivo se ha vuelto indispensable en mi vida diaria. No puedo concebir cómo sería mi día sin esta herramienta versátil. Desde el trabajo hasta el entretenimiento, este producto ha demostrado ser la elección perfecta. Su diseño elegante y la eficiencia de la batería son solo algunos de los aspectos que hacen que este dispositivo se destaque."
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="testimonial-item mt-4">
+            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+            <h3>Jena Karlis</h3>
+            <h4>Store Owner</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              "La duración de la batería de este producto es una verdadera maravilla. Puedo utilizarlo durante todo el día sin preocuparme por quedarme sin energía. Esto ha mejorado significativamente mi productividad y ha eliminado la necesidad constante de cargar el dispositivo. Una de las mejores inversiones que he realizado."
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="testimonial-item mt-4">
+            <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+            <h3>Matt Brandon</h3>
+            <h4>Freelancer</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              "La combinación de un diseño elegante y una conectividad rápida hacen que este producto sea excepcional. Me sorprendió gratamente la velocidad con la que puedo acceder y compartir información. La experiencia de usuario se ve realzada por estos detalles, convirtiendo cada interacción en una experiencia eficiente y placentera."
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+          <div class="testimonial-item mt-4">
+            <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+            <h3>John Larson</h3>
+            <h4>Entrepreneur</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              "Desde que adquirí este dispositivo, se ha vuelto esencial en mi rutina diaria. Es increíble cómo ha mejorado mi productividad tanto en el trabajo como en mis momentos de ocio. Su diseño elegante y la duración de la batería son realmente destacables. No puedo imaginar pasar un día sin esta herramienta versátil que se adapta perfectamente a mis necesidades."
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
+          <div class="testimonial-item mt-4">
+            <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
+            <h3>Emily Harison</h3>
+            <h4>Store Owner</h4>
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              "Este dispositivo se ha convertido en un compañero inseparable en mi día a día. Su versatilidad y rendimiento excepcional lo hacen ideal para cualquier tarea, ya sea laboral o de entretenimiento. Su diseño elegante y la eficiencia de la batería son solo algunas de las razones por las cuales este producto destaca entre otros en el mercado. ¡No puedo imaginarme sin él!"
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Testimonials Section -->
