he hecho algunos cambios en los css y html de producto

--- a/src/app/componentes/catalogo/gafas/gafas.component.html
+++ b/src/app/componentes/catalogo/gafas/gafas.component.html
@@ -2,7 +2,7 @@
 <br><br><br><br><br>
 <div class="pagina-producto-container">
     <div class="columna-izquierda">
-      <img src="../Media/producto3.jpg" alt="Gafas VR UltraVision">
+      <img src="assets/img/producto3.jpg" alt="Gafas VR UltraVision">
   
       <!-- Selectores para alternativas -->
       <label>Color:</label>
@@ -41,8 +41,8 @@
       <h2>Gafas VR UltraVision - Tecnología Avanzada</h2>
       <p>Explora la última revolución en experiencias virtuales con nuestras Gafas VR UltraVision, un hito en la tecnología de realidad virtual. Con características vanguardistas y un diseño futurista, este dispositivo transformará por completo tu manera de sumergirte en mundos virtuales.</p>
       <p class="precio">Precio: $499.99</p>
-      <a href="../Pagos/Pagos.html" class="add-to-cart">Agregar al Carrito</a>
-      <a href="../Pagos/Pagos.html" class="buy-now-button">Comprar Ahora</a>
+      <a href="/carrito" class="add-to-cart">Agregar al Carrito</a>
+      <a href="/carrito" class="buy-now-button">Comprar Ahora</a>
   
       <!-- Sección de Características Destacadas -->
       <section>
@@ -58,3 +58,118 @@
           <li>Sistema operativo rápido y eficiente para una navegación fluida</li>
         </ul>
       </section>
+
+ </div>
+ </div>
+
+ 
+ <!-- ======= Testimonials Section ======= -->
+ <section id="testimonials" class="testimonials section-bg">
+  <div class="container">
+
+    <div class="row">
+
+      <div class="col-lg-6" data-aos="fade-up">
+        <div class="testimonial-item">
+          <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+          <h3>Saul Goodman</h3>
+          <h4>Ceo &amp; Founder</h4>
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            "Las gafas VR Immersia son simplemente increíbles. La duración de la batería es asombrosa. Puedo sumergirme en mundos virtuales durante horas sin preocuparme por quedarme sin energía. Esto ha transformado por completo mi experiencia de juego y entretenimiento, brindándome horas de diversión ininterrumpida. ¡Definitivamente, una compra que vale la pena!"
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="testimonial-item mt-4 mt-lg-0">
+          <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+          <h3>Sara Wilsson</h3>
+          <h4>Designer</h4>
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            "Desde que tengo las gafas VR DreamVision, mi forma de consumir contenido ha cambiado por completo. La autonomía de la batería es excepcional, lo que me permite disfrutar de películas, series y videos en realidad virtual durante largos períodos sin interrupciones. Es como llevar un cine portátil conmigo donde quiera que vaya. ¡Una auténtica revolución en el entretenimiento digital!"
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="testimonial-item mt-4">
+          <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+          <h3>Jena Karlis</h3>
+          <h4>Store Owner</h4>
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            "Nunca pensé que unas gafas VR pudieran hacer tanto por mi creatividad hasta que conseguí las RiftMaster. La duración de la batería es fenomenal, lo que me permite sumergirme en sesiones de diseño y creación de contenido en realidad virtual sin preocuparme por los constantes descansos para recargar. Estas gafas han elevado mi capacidad creativa a nuevas alturas, convirtiéndose en una herramienta indispensable para mi trabajo."
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="testimonial-item mt-4">
+          <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+          <h3>Matt Brandon</h3>
+          <h4>Freelancer</h4>
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            "Con las gafas VR VisionaryX, he descubierto un nuevo nivel de inmersión en mis juegos favoritos. La duración de la batería es excepcionalmente larga, lo que me permite adentrarme en mundos virtuales durante horas sin interrupciones. Esta libertad de movimiento y tiempo de juego prolongado ha redefinido por completo mi experiencia de juego, haciéndola más envolvente y emocionante que nunca. ¡Definitivamente, un imprescindible para cualquier entusiasta de la realidad virtual!"
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+        </div>
+      </div>
+
+    
+
+     
+
+    </div>
+
+  </div>
+</section><!-- End Testimonials Section -->
+<!-- Sección de Productos Relacionados Destacados -->
+<section id="productos-relacionados" class="productos-relacionados">
+  <div class="container">
+    <div class="section-title" data-aos="fade-up">
+      <h2>Productos Relacionados Destacados</h2>
+      <p>Explora otros productos que podrían interesarte</p>
+    </div>
+
+    <div class="row" data-aos="fade-up" data-aos-delay="100">
+
+      <!-- Producto 1 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="producto">
+            <img src="assets/img/producto4.jpg" class="img-fluid" alt="Producto 2">
+            <h3>Impresora 3D</h3>
+            <p class="precio">$699.99</p>
+            <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
+        </div>
+    </div>
+      <!-- Producto 2 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="producto">
+          <img src="assets/img/producto2.jpg" class="img-fluid" alt="Producto 3">
+          <h3>Móviles</h3>
+          <p class="precio">$999.99</p>
+          <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
+        </div>
+      </div>
+
+      <!-- Producto 3 -->
+      <div class="col-lg-4 col-md-6">
+        <div class="producto">
+          <img src="assets/img/producto1.jpg" class="img-fluid" alt="Producto 4">
+          <h3>Relojes</h3>
+          <p class="precio">$499.99</p>
+          <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+      
