--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -11,12 +11,15 @@
         <li><a href="/home">Home</a></li>
         <li><a href="/catalogo">Catálogo</a></li>
         <li><a href="/contacto">Contacto</a></li>
+        <li><a href="/carrito">Carrito</a></li>
+        <li><a href="/impresora">Login</a></li>
       </ul>
       <ul class="list-unstyled">
         <li><a href="/moviles">Móviles</a></li>
         <li><a href="/relojes">Relojes</a></li>
         <li><a href="/gafas">Gafas VR</a></li>
         <li><a href="/impresora">Impresoras 3D</a></li>
+      
       </ul>
     </div>
     <div class="social-links text-center text-md-end">
