--- a/src/app/componentes/catalogo/gafas/gafas.component.css
+++ b/src/app/componentes/catalogo/gafas/gafas.component.css
@@ -54,15 +54,15 @@
     padding: 10px 20px;
     margin-top: 20px;
     text-decoration: none;
-    color: #000000;
-    background-color: rgba(234, 181, 27, 0.87);
+    color: #ffffff;
+    background-color: #333333;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
 
 .add-to-cart:hover,
 .buy-now-button:hover {
-    background-color: #333; /* Cambia el color al pasar el mouse */
+    background-color: #1bbd36;
 }
 
 /* Estilo para el contenido adicional sobre el producto */
