--- a/src/app/componentes/catalogo/relojes/relojes.component.css
+++ b/src/app/componentes/catalogo/relojes/relojes.component.css
@@ -6,6 +6,7 @@
 
 .columna-izquierda {
     width: 40%;
+
 }
 
 .columna-izquierda .especificaciones {
@@ -18,20 +19,23 @@
     flex: 1;
 }
 
-.producto1 {
-    width: 80%;
-    height: auto;
+/*  imagen del producto */
+.columna-izquierda img {
+    width: 700px;
     border: 1px solid #ddd;
-    border-radius: 10px;
+    border-radius: 4px;
+    padding: 5px;
+    border-radius: 20px;
     max-width: 100%;
-    max-height: 100%;
 }
 
+/*  selectores de color y capacidad */
 .columna-izquierda select {
     margin-top: 10px;
     padding: 8px;
 }
 
+/* Estilo para el título, descripción y precio del producto */
 .columna-derecha h2,
 .columna-derecha p,
 .columna-derecha .precio {
@@ -43,6 +47,7 @@
     color: rgb(0, 0, 0);
 }
 
+/* Estilo para los botones "Agregar al Carrito" y "Comprar Ahora" */
 .add-to-cart,
 .buy-now-button {
     display: inline-block;
@@ -60,10 +65,12 @@
     background-color: #1bbd36;
 }
 
+/* Estilo para el contenido adicional sobre el producto */
 .content-container {
     margin: 20px;
 }
 
+/* secciones de características y opiniones */
 .content-container section {
     margin-bottom: 30px;
 }
@@ -73,6 +80,7 @@
     color: #333;
 }
 
+/*  listas de características */
 .content-container ul {
     list-style-type: disc;
     margin-left: 20px;
